# surrealdb-rust-wasm-repro

./: Cargo.toml  LICENSE  README.md  index.html  main.js
.cargo/: config.toml
src/: ds.rs  lib.rs
