[package]
name = "surrealdb-rust-wasm-repro"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
surrealdb = { version = "2.2", features = ["kv-indxdb"] }
console_log = { version = "1.0", features = ["color"] }
log = "0.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
